<?xml version='1.0' encoding='utf-8'?>

<project xmlns='http://maven.apache.org/POM/4.0.0' xmlns:xsi='http://www.w3.org/2001/XMLSchema-instance' xsi:schemaLocation='http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd'>
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>com.zte.umebn.parent</groupId>
    <artifactId>version</artifactId>
    <version>1.0-SNAPSHOT</version>
  </parent>

  <groupId>com.zte.umebn.parent</groupId>
  <artifactId>parent</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <properties>
    <build.output>../build/output</build.output>

    <check.findbugs>${build.output}/../checks/findbugs.xml</check.findbugs>
    <dropwizard.version>0.8.0</dropwizard.version>

    <opendaylight.ietf-inet-types.version>1.2.0-SNAPSHOT</opendaylight.ietf-inet-types.version>
    <opendaylight.ietf-inet-types.unicom.version>2010.09.24.10-SNAPSHOT</opendaylight.ietf-inet-types.unicom.version>
    <opendaylight.ietf-yang-types.version>2013.07.15.10-SNAPSHOT</opendaylight.ietf-yang-types.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>io.dropwizard</groupId>
      <artifactId>dropwizard-assets</artifactId>
      <version>${dropwizard.version}</version>
    </dependency>

    <dependency>
      <groupId>io.dropwizard</groupId>
      <artifactId>dropwizard-jetty</artifactId>
      <version>${dropwizard.version}</version>
    </dependency>

    <dependency>
      <groupId>io.dropwizard</groupId>
      <artifactId>dropwizard-hibernate</artifactId>
      <version>${dropwizard.version}</version>
    </dependency>

    <dependency>
      <groupId>io.dropwizard</groupId>
      <artifactId>dropwizard-migrations</artifactId>
      <version>${dropwizard.version}</version>
    </dependency>

    <dependency>
      <groupId>io.dropwizard</groupId>
      <artifactId>dropwizard-testing</artifactId>
      <version>${dropwizard.version}</version>
      <scope>test</scope>
    </dependency>

		<!-- deleted by 张晓冬: 解决 consumer 这个包下面引入的 jersey-all-2.22.2.jar 中包含的 HK2 代码与 javaAF 中的 HK2 冲突问题，先删除这段依赖，等有模块编译不过再说
    <dependency>
      <groupId>com.eclipsesource.jaxrs</groupId>
      <artifactId>consumer</artifactId>
      <version>5.3.1</version>
    </dependency>
    -->

    <dependency>
      <groupId>com.squareup.okhttp</groupId>
      <artifactId>okhttp</artifactId>
      <version>2.7.5</version>
    </dependency>

    <dependency>
      <groupId>com.squareup.retrofit2</groupId>
      <artifactId>converter-gson</artifactId>
      <version>2.1.0</version>
    </dependency>

    <dependency>
      <groupId>net.sf.json-lib</groupId>
      <artifactId>json-lib</artifactId>
      <version>2.4</version>
    </dependency>

    <dependency>
      <groupId>org.json</groupId>
      <artifactId>org.json</artifactId>
      <version>2.0</version>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.16.10</version>
    </dependency>

    <dependency>
      <groupId>com.zte.umebn.parent</groupId>
      <artifactId>test</artifactId>
      <version>1.0-SNAPSHOT</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-clean-plugin</artifactId>

        <executions>
          <execution>
            <id>clean.clean</id>
            <phase>clean</phase>

            <goals>
              <goal>clean</goal>
            </goals>

            <configuration>
              <filesets/>

              <failOnError>false</failOnError>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>

        <configuration>
          <source>1.8</source>
          <target>1.8</target>

          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>

        <configuration>
          <failOnMissingWebXml>false</failOnMissingWebXml>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>

        <configuration>
          <argLine>-Xms128m -Xmx512m -XX:PermSize=128m -XX:MaxPermSize=512m</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
